--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "cyber-hunter",
   "version": "1.0.0",
   "description": "A Team and Project management and Ranking Web services.",
-  "main": "api/index.js",
+  "main": "src/index.js",
   "type" : "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
