--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
   "author": "Prem Raj",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.9.0",
     "bcryptjs": "^2.4.3",
     "cloudinary": "^2.5.1",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
+    "date-fns": "^4.1.0",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "express-validator": "^7.2.0",
@@ -29,7 +31,10 @@
     "nodemailer": "^6.9.16",
     "nodemon": "^3.1.3",
     "path": "^0.12.7",
-    "socket.io": "^4.8.1"
+    "qrcode": "^1.5.4",
+    "socket.io": "^4.8.1",
+    "speakeasy": "^2.0.0",
+    "ua-parser-js": "^2.0.3"
   },
   "devDependencies": {
     "prettier": "3.4.2"
