--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "googleapis": "^148.0.0",
     "jsonwebtoken": "^9.0.2",
     "mailtrap": "^3.4.0",
-    "mongoose": "^8.4.1",
+    "mongoose": "8.5.2",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.16",
