--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "date-fns": "^4.1.0",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "express-session": "^1.18.1",
     "express-validator": "^7.2.0",
     "googleapis": "^148.0.0",
     "jsonwebtoken": "^9.0.2",
@@ -30,6 +31,8 @@
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.16",
     "nodemon": "^3.1.3",
+    "passport": "^0.7.0",
+    "passport-github2": "^0.1.12",
     "path": "^0.12.7",
     "qrcode": "^1.5.4",
     "socket.io": "^4.8.1",
