--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "crypto": "^1.0.1",
     "date-fns": "^4.1.0",
     "dotenv": "^16.4.5",
+    "ethers": "^5.7.2",
     "express": "^4.19.2",
     "express-session": "^1.18.1",
     "express-validator": "^7.2.0",
